# fourier-boolean

./: .gitignore  CMakeLists.txt  check_all_functions.h  check_xor_dnf.h  fourier.cpp  fourier.hpp  main.cpp
